--- a/TimViecLam-API/composer.json
+++ b/TimViecLam-API/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.2",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
