--- a/TimViecLam-API/package.json
+++ b/TimViecLam-API/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vue-meta": "^2.4.0",
+        "vue-router": "^3.4.3"
     }
 }
