--- a/Project-TimViecLam/package.json
+++ b/Project-TimViecLam/package.json
@@ -11,20 +11,14 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^5.0.7",
         "lodash": "^4.17.19",
-        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.20.1",
+        "sass": "^1.28.0",
         "sass-loader": "^8.0.0",
-        "vue": "^2.6.12",
+        "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {
-        "vue-meta": "^2.4.0",
-        "vue-router": "^3.4.3"
-    }
+    "dependencies": {}
 }
