--- a/Project-TimViecLam/composer.json
+++ b/Project-TimViecLam/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.2"
+        "laravel/ui": "^2.2",
+        "yajra/laravel-datatables-oracle": "^9.14"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
