--- a/Project-TimViecLam/composer.json
+++ b/Project-TimViecLam/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "jacobbennett/pjax": "~1.0",
         "yajra/laravel-datatables-oracle": "^9.14"
     },
     "require-dev": {
