--- a/Project-TimViecLam/composer.json
+++ b/Project-TimViecLam/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "buihuycuong/vnfaker": "dev-master",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jacobbennett/pjax": "~1.0",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
-        "jacobbennett/pjax": "~1.0",
         "yajra/laravel-datatables-oracle": "^9.14"
     },
     "require-dev": {
