--- a/Project-TimViecLam/composer.json
+++ b/Project-TimViecLam/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "spatie/laravel-analytics": "^3.10",
         "yajra/laravel-datatables-oracle": "^9.14"
     },
     "require-dev": {
