--- a/Project-TimViecLam/composer.json
+++ b/Project-TimViecLam/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "jacobbennett/pjax": "~1.0",
         "laravel/framework": "^7.24",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
         "spatie/laravel-analytics": "^3.10",
