--- a/Project-TimViecLam/.env.example
+++ b/Project-TimViecLam/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Tuyển dụng, tìm việc làm nhanh hiệu quả tại Timvieclam.xyz
+APP_NAME=TimViecLam
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Y/eqmNnQ6eEmHc3uhTKUCMXtoWCoYH469+kUFeYWAww=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=dungdq5520@gmail.com
+MAIL_PASSWORD=doanquocdung
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=dungdq5520@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+ANALYTICS_VIEW_ID=234075121
